[package]
  name = "mk"
  version = "0.1.0"
  edition = "2021"

[dependencies]
clap = { version = "4.5.23", features = ["derive"] }
  shell-words = "1.1.0"
  time = "0.3.34"
  tracing = "0.1.40"
  tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
  walkdir = "2.5.0"

[dev-dependencies]
  assert_cmd = "2.0.16"
  tempfile = "3.10.1"
  tracing-test = "0.2.4"
